Solved fps update issue